# python_backup_cli

./: README.md  generate_md5.py  hello_bucket.py  manifest.py  pyproject.toml
backup_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
pub_backup_cli/: cli.py
